add military school

--- a/vladimir_sirghi_resume.tex
+++ b/vladimir_sirghi_resume.tex
@@ -318,8 +318,19 @@ quality work and team cohesion.}
 \bulletItem{English}
 \bulletItem{General Culture and Expression}
 \outerBulletListEnd
+\vspace{1em} % Add space here
+
+\companyNameAndLocationHeading
+{\bref{https://www.armyacademy.ro/engleza/fmm.php}{\enquote{Nicolae Balcescu} Land Forces Academy }}{Sibiu, Romania }
+\titleAndDateHeading
+{\bref{https://github.com/slalomeset/diplomas/blob/main/military_academy.pdf}{ Bachelor's Degree in Management of Military Organizations }}{September 2002 \textbf{--} August 2006}
+\outerBulletListStart
+\bulletItem{Faculty of Military Management has the mission to form, at undergraduate and postgraduate level, officers for arms/military specialties of the Land Forces and also military and civilian specialists for other beneficiaries from the national defence system, public order and national security. The mission is in total accordance with the Institutional Strategy of “Nicolae Balcescu” Land Forces Academy and aims at creating general and specific professional competencies for the arms/military specialties: Artillery, Engineering, Defense CBRN, Transportation, Intendance, Finances and Accounting, Communications and Informatics.}
+\outerBulletListEnd
+
 \sectionListEnd
 \vspace{1em} % Add space here
+
 
 \section{Languages}
 \sectionListStart
