add Computer Science degree

--- a/vladimir_sirghi_resume.tex
+++ b/vladimir_sirghi_resume.tex
@@ -79,7 +79,7 @@
 \def\bulletIndent{20pt} % indent of bullet lists
 
 % set bullet list symbol formatting
-\setlist[itemize,1]{label=$\vcenter{\hbox{\tiny$\bullet$}}$} 
+\setlist[itemize,1]{label=$\vcenter{\hbox{\tiny$\bullet$}}$}
 \setlist[itemize,2]{label=$\vcenter{\hbox{\tiny$\bullet$}}$}
 \setlist[itemize,3]{label=$\vcenter{\hbox{\tiny$\circ$}}$}
 
@@ -94,7 +94,7 @@
 
 % company name -- location
 \newcommand{\companyNameAndLocationHeading}[2]{
-  \item 
+  \item
     \begin{tabular*}{1.0\textwidth}[b]{l@{\extracolsep{\fill}}r}
       \textbf{#1} & #2
     \end{tabular*}
@@ -277,8 +277,27 @@ quality work and team cohesion.}
 \bulletItem{Advanced Integrated Components}
 \bulletItem{Energy production and management for systems}
 \outerBulletListEnd
-
 \vspace{1em} % Add space here
+
+\companyNameAndLocationHeading
+{\bref{https://sup-fc.univ-fcomte.fr/informatique}{University of Franche-Comté}}{Bourgogne-Franche-Comté, France}
+\titleAndDateHeading
+{Bachelor in \enquote{Computer Science}}{September 2020 \textbf{--} August 2021}
+\outerBulletListStart
+\bulletItem{Data base}
+\bulletItem{Algorithms and Basics of Programming}
+\bulletItem{English}
+\bulletItem{Analysis and modeling of information systems}
+\bulletItem{Formal methods}
+\bulletItem{Computer architecture}
+\bulletItem{Systems and Networks}
+\bulletItem{Language theory}
+\bulletItem{Program specification and proof}
+\bulletItem{Web languages}
+\bulletItem{Advanced programming}
+\outerBulletListEnd
+\newpage % Jump to new page
+
 \companyNameAndLocationHeading
 {\bref{https://www.univ-tlse3.fr/decouvrir-nos-diplomes/licence-parcours-eea-fondamental-eea-f}{Toulouse 3 University \enquote{Paul Sabatier}}}{Toulouse, Occitanie, France}
 \titleAndDateHeading
