add Verif Lead experience

--- a/vladimir_sirghi_resume.tex
+++ b/vladimir_sirghi_resume.tex
@@ -191,6 +191,28 @@
 \bulletItem{Developed firmware for power consumption profiling.}
 \outerBulletListEnd
 \vspace{1em} % Add space here
+
+\companyNameAndLocationHeading {\bref{https://www.st.com/}{STMicroelectronics}}{Le Bourget-du-lac, Auvergne-Rhône-Alpes, France}
+\titleAndDateHeading
+{Verification lead pre-pg}{March 2024 \textbf{--} December 2024}
+\outerBulletListStart
+\bulletItem{Leading actions \& responsibilities:}
+\innerBulletListStart
+\bulletItem{Defined \& regrouped actions in milestones for better visibility and progress tracking.}
+\bulletItem{Organized milestones in sprints, with clear objectives, including demo requirements.}
+\bulletItem{Assigned stories \& tasks to team members and myself within each sprint.}
+\bulletItem{Conducted regular reviews \& status meetings to review progress and apply corrections.}
+\bulletItem{Presented sprint demos to showcase progress and meet project targets.}
+\innerBulletListEnd
+\bulletItem{Hands on contributions:}
+\innerBulletListStart
+\bulletItem{Contributed to features implementation, enhanced project functionalities.}
+\bulletItem{Implemented tests to ensure features reliability and performance.}
+\bulletItem{Code reviews.}
+\bulletItem{Bug fixing and troubleshooting.}
+\innerBulletListEnd
+\outerBulletListEnd
+
 \companyNameAndLocationHeading
 {\bref{https://atos.net/}{Atos}}{Grenoble, Auvergne-Rhône-Alpes, France}
 \titleAndDateHeading
@@ -215,10 +237,9 @@
 
 \bulletItem{Documented tests specifications and reported on test results.}
 \bulletItem{Used git for code versioning, Jenkins for automation and integration}
-\bulletItem{Wroked in agile environment.}
+\bulletItem{Worked in agile environment.}
 \outerBulletListEnd
-
-\newpage
+\vspace{1em}
 
 \companyNameAndLocationHeading
 {\bref{https://www.st.com/}{STMicroelectronics}}{Grenoble, Auvergne-Rhône-Alpes, France}
@@ -296,7 +317,7 @@ quality work and team cohesion.}
 \bulletItem{Web languages}
 \bulletItem{Advanced programming}
 \outerBulletListEnd
-\newpage % Jump to new page
+\vspace{1em}
 
 \companyNameAndLocationHeading
 {\bref{https://www.univ-tlse3.fr/decouvrir-nos-diplomes/licence-parcours-eea-fondamental-eea-f}{Toulouse 3 University \enquote{Paul Sabatier}}}{Toulouse, Occitanie, France}
@@ -369,6 +390,7 @@ quality work and team cohesion.}
 \vspace{\vspaceAfterBullets}
 \bulletItem{\textbf{Protocols:}{ i2c, spi, uart, jtag, swd, can}}
 \vspace{\vspaceAfterBullets}
+\newpage
 \bulletItem{\textbf{Continued Education:}}
 \outerBulletListStart
 \bulletItem{\bref{https://www.udemy.com/course/mastering-rtos-hands-on-with-freertos-arduino-and-stm32fx/}{Mastering RTOS: Hands on FreeRTOS and STM32Fx with Debugging}}
