add Professional Trainings Section

--- a/vladimir_sirghi_resume.tex
+++ b/vladimir_sirghi_resume.tex
@@ -380,8 +380,26 @@ quality work and team cohesion.}
 \sectionListEnd
 \vspace{1em} % Add space here
 
-%----------- SKILLS -----------
+%----------- Professional Training -----------
+\section{Professional Trainings}
+\sectionListStart
+\bulletItem{\empty}
+\outerBulletListStart
+\bulletItem{Writing secure firmware}
+\bulletItem{ISO26262 in Product Development}
+\bulletItem{Automotive Safety HW ISO26262}
+\bulletItem{Object Oriented Programming in C++}
+\bulletItem{General Imaging Concepts \& Integration}
+\bulletItem{Understanding Image Sensor Characterization}
+\bulletItem{Indirect Time Of Flight}
+\bulletItem{Image Sensors Architecture}
+\bulletItem{Algorithms for Image Analysis}
+\bulletItem{Imaging Signal Processing Algorithms}
+\outerBulletListEnd
+\sectionListEnd
+\vspace{1em} % Add space here
 
+%----------- SKILLS -----------
 \section{Skills \& Interests}
 \sectionListStart
 \bulletItem{\textbf{Languages:}{ C, python, bash, MATLAB}}
@@ -390,8 +408,8 @@ quality work and team cohesion.}
 \vspace{\vspaceAfterBullets}
 \bulletItem{\textbf{Protocols:}{ i2c, spi, uart, jtag, swd, can}}
 \vspace{\vspaceAfterBullets}
-\newpage
-\bulletItem{\textbf{Continued Education:}}
+
+\bulletItem{\textbf{Continued Education:} \bref{https://github.com/slalomeset/certificates/blob/main/UdemyCoursesCertification.pdf}{click\&check certificates} }
 \outerBulletListStart
 \bulletItem{\bref{https://www.udemy.com/course/mastering-rtos-hands-on-with-freertos-arduino-and-stm32fx/}{Mastering RTOS: Hands on FreeRTOS and STM32Fx with Debugging}}
 \bulletItem{\bref{https://www.udemy.com/course/bash-mastery/?kw=Bash+Mastery\%3A+The+Complete+Guide+to+Bash+Shell+Scriptin&src=sac}{Bash Mastery: The Complete Guide to Bash Shell Scripting}}
@@ -403,8 +421,6 @@ quality work and team cohesion.}
 \bulletItem{\bref{https://www.udemy.com/course/mastering-microcontroller-with-peripheral-driver-development/?kw=Mastering+Microcontroller+and+Embedded+Driver+Development&src=sac}{Mastering Microcontroller and Embedded Driver Development}}
 \bulletItem{\bref{https://www.udemy.com/course/stm32f4-arm-cortex-mx-custom-bootloader-development/?couponCode=25BBPMXINACTIVE}{STM32Fx Microcontroller Custom Bootloader Development}}
 \bulletItem{\bref{https://www.udemy.com/course/microcontroller-embedded-c-programming/?kw=Microcontroller+Embedded+C+Programming\%3A+absolute+beginners&src=sac}{Microcontroller Embedded C Programming: Absolute Beginners}}
-
-
 \outerBulletListEnd
 \vspace{\vspaceAfterBullets}
 \bulletItem{\textbf{Interests:}{ family activities \& education, music, cross-training}}
