add english TOEIC certif

--- a/vladimir_sirghi_resume.tex
+++ b/vladimir_sirghi_resume.tex
@@ -374,7 +374,7 @@ quality work and team cohesion.}
 
 \section{Languages}
 \sectionListStart
-\bulletItem{\textbf{English:}{ Professional}}
+\bulletItem{\textbf{English:}{ Professional} \bref{https://github.com/slalomeset/certificates/blob/main/toeic_english.pdf}{[TOEIC certificate]} }
 \bulletItem{\textbf{French:}{ Native}}
 \bulletItem{\textbf{Romanian:}{ Native}}
 \sectionListEnd
