update details about the curent experience at ST.

--- a/cover_letter/cove_letter_template.tex
+++ b/cover_letter/cove_letter_template.tex
@@ -28,9 +28,9 @@ Je suis très à l’aise en anglais et je m'adapte facilement aux environnement
 Je serais ravi de discuter plus en détail de ma candidature et de la manière dont je peux contribuer au succès de votre équipe. Je vous remercie pour votre attention et j'espère avoir l'opportunité de vous rencontrer prochainement.
 
 \begin{flushleft}
-Cordialement, \\
+Sincerely, \\
 Vladimir SIRGHI, \\
-Ingénieur Logiciel Embarqué.
+Embedded Software Engineer.
 \end{flushleft}
 
 \end{letter}
