--- a/vladimir_sirghi_resume.tex
+++ b/vladimir_sirghi_resume.tex
@@ -169,26 +169,39 @@
 \titleAndDateHeading
 {Embedded software engineer}{March 2022 \textbf{--} Present}
 \outerBulletListStart
-\bulletItem{Develop firmware for ARM Cortex-M targets and FPGAs SOC prototypes.}
-\bulletItem{Lead and report on verification activities, ensuring thorough testing and validation.}
-\bulletItem{Operate in an agile environment: address stories, tasks, tickets, sprints, issuing pull requests.}
-\bulletItem{Provide support and guidance to external consultants throughout project execution.}
-\bulletItem{Closely collaborate with digital design, architecture and test teams.}
-\bulletItem{Document firmware design documentation.}
-\bulletItem{Coding in C in automotive safety oriented projects.}
-\bulletItem{Write cmake scripts for C/C++ project system build.}
-\bulletItem{Use gcc and gdb for compilation and debugging.}
-\bulletItem{Use and update low level drivers LL and HAL: hardware abstraction layers.}
+\bulletItem{Developing firmwares for ARM Cortex-M targets and FPGAs SOC prototypes.}
+\bulletItem{Operating in agile environment: addressing stories, tasks, tickets, sprints, issuing pull requests.}
+\bulletItem{Providing support and guidance to external consultants throughout project execution.}
+\bulletItem{Collaborating with digital design, architecture, algorithm and test teams.}
+\bulletItem{Documenting firmware design specification and requirements.}
+\bulletItem{Coding in C in automotive safety-oriented projects.}
+\bulletItem{Writing cmake scripts for C/C++ project system build.}
+\bulletItem{Using gcc and gdb for compilation and debugging.}
+\bulletItem{Using and updating \bref{https://dev.st.com/stm32cube-docs/stm32u5-hal2/2.0.0-beta.1.1/docs/drivers/stm32u5xx_drivers_documentation.html}{\textit{LL}\footnote{LL : Low Level} and \textit{HAL}\footnote{HAL : Hardware Abstraction Layer}} libraries from ST for peripheral drivers.}
 \bulletItem{Bare metal coding.}
-\bulletItem{Debug and optimize software in a cross-team environment.}
-\bulletItem{Use git for versioning in a multiple nested repositories project environment.}
-\bulletItem{Address, review pull-requests on github.}
-\bulletItem{Develop in Windows, Linux, WSL, vscode windows to linux environments.}
-\bulletItem{Write python and bash scripts to automate tasks and improve efficiency.}
-\bulletItem{Make unit and integration tests.}
-\bulletItem{Use Jenkins automated tasks, collaborate with the dev-ops to put in place new jobs.}
-\bulletItem{Implemented mechanism allowing the user to extract reports on demand involving the ROS tool.}
-\bulletItem{Developed firmware for power consumption profiling.}
+\bulletItem{Debugging and optimizing software in a cross-team environment.}
+\bulletItem{Using git for versioning in a multiple nested repositories project environment.}
+\bulletItem{Addressing and reviewing pull-requests on github.}
+\bulletItem{Developping in Windows, Linux, WSL, windows to linux in ssh environments.}
+\bulletItem{Writing python and bash scripts to automate tasks and improve efficiency.}
+\bulletItem{Writing unit tests (\bref{https://cmocka.org/}{cmocka} framework)}
+\bulletItem{Writing integration tests (\bref{https://gauge.org/}{gauge} framework and Python scripting).}
+\bulletItem{Using Jenkins automated tasks and tools, collaborating with the dev-ops for new automation.}
+\bulletItem{Implementing a software module to extract debug reports, parameters, phy indicators and channel impulse responses.}
+\bulletItem{Employing \bref{https://www.ros.org/}{\textit{ROS}\footnote{ROS : Robot Operating System}} to effectively interpret the collected data.}
+\bulletItem{Developing firmware for power consumption profiling.}
+\bulletItem{Maintaining \textit{HTOL}\footnote{HTOL : High-Temperature Operating Life} firmware for QA purposes.}
+
+\outerBulletListEnd
+
+\outerBulletListStart
+\bulletItem{Achievements:}
+\begin{itemize}
+    \item Leading on verification activities resulted in a successful, on-time "Go" status for silicon pattern generation.
+    \item The developed software debug module reduced debug time and increased overall troubleshooting capabilities.
+    \item Debug reports, along with channel impulse response data, are available in \bref{https://plotjuggler.io/}{PlotJuggler} visualization tool.
+    \item The pipe: debug module + \textit{ROS} + visualization is highly used in demo purposes along with system analysis.
+\end{itemize}
 \outerBulletListEnd
 \vspace{1em} % Add space here
 
